Moja spletna stran.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
 </head>
 <body>
     <h1>Naslov polepša stran</h1>
-   <p>Never gonna give you up, never gonna let you down.</p>
+   <p>Moja spletna stran.</p>
 </body>
 </html>
